--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,16 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 
     implementation 'org.springframework.boot:spring-boot-starter-web:3.0.5'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.5'
+    implementation 'org.springframework.data:spring-data-jpa:3.0.4'
 
     compileOnly 'org.projectlombok:lombok:1.18.26'
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
 
     implementation 'com.google.code.gson:gson:2.10.1'
+
+    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+    implementation 'org.postgresql:postgresql:42.6.0'
 }
 
 test {
