--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,8 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-web:3.0.5'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.5'
-    implementation 'org.springframework.data:spring-data-jpa:3.0.4'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.5'
+
 
     compileOnly 'org.projectlombok:lombok:1.18.26'
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
@@ -24,6 +25,8 @@ dependencies {
 
     implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
     implementation 'org.postgresql:postgresql:42.6.0'
+
+    implementation 'org.slf4j:slf4j-api:2.0.7'
 }
 
 test {
