--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 spring:
   datasource:
-    password: postgres
+    url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
-    url: jdbc:postgresql:localhost:5432/postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
