--- a/store-backend/build.gradle
+++ b/store-backend/build.gradle
@@ -19,22 +19,17 @@ jar {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
 
-    implementation 'org.springframework.boot:spring-boot-starter-web:3.0.5'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.5'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.5'
-
-
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     compileOnly 'org.projectlombok:lombok:1.18.26'
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
-
     implementation 'com.google.code.gson:gson:2.10.1'
-
     implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
     implementation 'org.postgresql:postgresql:42.6.0'
-
     implementation 'org.slf4j:slf4j-api:2.0.7'
 }
 
