--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,4 +1,4 @@
 FROM postgres:15-alpine
 
-ADD /database/script/init.sql /docker-entrypoint-initdb.d
-ADD /database/script/data.sql /docker-entrypoint-initdb.d
+# COPY script/init.sql /docker-entrypoint-initdb.d/
+# COPY script/data.sql /docker-entrypoint-initdb.d/
