--- a/store-backend/build.gradle
+++ b/store-backend/build.gradle
@@ -22,10 +22,23 @@ jar {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+    testImplementation 'org.assertj:assertj-core:3.24.2'
+
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+//    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+//    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+//     https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui
+//    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
+    implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
+
+
+
+    implementation 'org.modelmapper:modelmapper:3.1.1'
     compileOnly 'org.projectlombok:lombok:1.18.26'
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
     implementation 'com.google.code.gson:gson:2.10.1'
