--- a/store-backend/src/main/resources/application.yml
+++ b/store-backend/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:
   sql:
     init:
       mode: always
-#      schema-locations: classpath:sql/schema.sql
-#      data-locations: classpath:sql/data.sql
+      schema-locations: classpath:sql/schema.sql
+      data-locations: classpath:sql/data.sql
 #  jpa:
 #    defer-datasource-initialization: true
 #    properties:
