feat: add type and brand enities, implement services and controllers for them

--- a/store-backend/src/main/resources/application.yml
+++ b/store-backend/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   sql:
     init:
-      mode: always
+      mode: never
       schema-locations: classpath:sql/schema.sql
       data-locations: classpath:sql/data.sql
 
