feat: add photo uploading to firestore

--- a/store-backend/src/main/resources/application.yml
+++ b/store-backend/src/main/resources/application.yml
@@ -22,6 +22,10 @@ application:
       refresh-token:
         expiration: 604800000 # 7 days
 
+firebase:
+  credential:
+    path: firebaseService.json
+
 logging:
   level:
     org.hibernate.SQL: debug
