--- a/store-backend/build.gradle
+++ b/store-backend/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+    implementation 'com.google.firebase:firebase-admin:8.1.0'
     implementation 'org.modelmapper:modelmapper:3.1.1'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'org.postgresql:postgresql'
